--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,8 @@
 spring.application.name=tiendaOnline
 server.port=4002
 spring.datasource.url=jdbc:mysql://localhost:3306/tiendaOnline
-spring.datasource.username=root
-spring.datasource.password = 1727792655
+spring.datasource.username=${DB_USUARIO}
+spring.datasource.password = ${DB_PASSWORD}
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.format-sql = true
