--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,3 +8,7 @@ spring.jpa.show-sql=true
 spring.jpa.format-sql = true
 
 //server.error.include-stacktrace=never
+
+spring.servlet.multipart.enabled=true
+spring.servlet.multipart.max-file-size=1024MB
+spring.servlet.multipart.max-request-size=1024MB
