--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,7 +7,7 @@ spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.format-sql = true
 
-//server.error.include-stacktrace=never
+server.error.include-stacktrace=never
 
 spring.servlet.multipart.enabled=true
 spring.servlet.multipart.max-file-size=1024MB
