--- a/src/tpoFrontend/frontendTPO/package.json
+++ b/src/tpoFrontend/frontendTPO/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "autoprefixer": "^10.4.18",
     "firebase": "^10.9.0",
+    "lucide-react": "^0.511.0",
     "postcss": "^8.4.36",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
