--- a/src/tpoFrontend/frontendTPO/package.json
+++ b/src/tpoFrontend/frontendTPO/package.json
@@ -13,6 +13,7 @@
     "autoprefixer": "^10.4.18",
     "firebase": "^10.9.0",
     "flowbite": "^3.1.2",
+    "jwt-decode": "^4.0.0",
     "lucide-react": "^0.511.0",
     "postcss": "^8.4.36",
     "react": "^18.2.0",
