--- a/src/tpoFrontend/frontendTPO/package.json
+++ b/src/tpoFrontend/frontendTPO/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@windmill/react-ui": "^0.6.0",
     "autoprefixer": "^10.4.18",
     "firebase": "^10.9.0",
     "flowbite": "^3.1.2",
@@ -33,6 +34,6 @@
     "eslint-plugin-react": "^7.34.0",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.5",
-    "vite": "^5.1.6"
+    "vite": "^6.3.5"
   }
 }
